--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,35 +1,130 @@
-# Starter pipeline for SE360 Lab 6
-# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Azure DevOps CI/CD Pipeline for UIT-Go Project
+# Self-hosted Agent Configuration
 
 trigger:
-- main
-- master
+  - main
 
+# Sử dụng self-hosted agent pool
 pool:
-  vmImage: 'Default'
+  name: 'Default'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '18.x'
-  displayName: 'Install Node.js'
+variables:
+  NODE_VERSION: '18.x'
+  BUILD_CONFIGURATION: 'Release'
 
-- script: |
-    echo "Starting CI/CD Pipeline..."
-    echo "SE360 Lab 6 - Build Process"
-  displayName: 'Display Info'
+stages:
+  - stage: Build
+    displayName: 'Build Stage'
+    jobs:
+      - job: BuildJob
+        displayName: 'Build and Test Job'
+        steps:
+          # Bước 1: Checkout code
+          - checkout: self
+            displayName: 'Checkout Source Code'
+          
+          # Bước 2: Setup Node.js
+          - task: NodeTool@0
+            inputs:
+              versionSpec: '$(NODE_VERSION)'
+            displayName: 'Install Node.js $(NODE_VERSION)'
+          
+          # Bước 3: Display environment info
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "=================================================="
+                Write-Host "Environment Information"
+                Write-Host "=================================================="
+                Write-Host "Node version: $(node --version)"
+                Write-Host "NPM version: $(npm --version)"
+                Write-Host "Build Configuration: $(env:BUILD_CONFIGURATION)"
+                Write-Host "Agent Name: $(env:AGENT_NAME)"
+                Write-Host "Agent OS: $(env:AGENT_OS)"
+                Write-Host "Build Number: $(env:BUILD_BUILDNUMBER)"
+                Write-Host "Build ID: $(env:BUILD_BUILDID)"
+                Write-Host "=================================================="
+            displayName: 'Display Environment Info'
+          
+          # Bước 4: Install dependencies
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "Installing project dependencies..."
+                npm install
+            displayName: 'NPM Install Dependencies'
+          
+          # Bước 5: Run build
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "Running build process..."
+                npm run build
+            displayName: 'NPM Run Build'
+          
+          # Bước 6: Run tests
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "Running tests..."
+                npm test
+            displayName: 'NPM Run Tests'
+          
+          # Bước 7: Create artifact
+          - task: ArchiveFiles@2
+            inputs:
+              rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+              includeRootFolder: false
+              archiveType: 'zip'
+              archiveFile: '$(Build.ArtifactStagingDirectory)/uit-go-app-$(Build.BuildId).zip'
+              replaceExistingArchive: true
+            displayName: 'Create Build Artifact'
+          
+          # Bước 8: Publish artifact
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
+            displayName: 'Publish Artifacts'
+          
+          # Bước 9: Success summary
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "=================================================="
+                Write-Host "BUILD SUCCESSFUL!"
+                Write-Host "=================================================="
+                Write-Host "Pipeline completed at: $(Get-Date)"
+                Write-Host "Artifact created: uit-go-app-$(env:BUILD_BUILDID).zip"
+                Write-Host "=================================================="
+            displayName: 'Build Success Summary'
 
-- script: |
-    npm install
-  displayName: 'npm install'
-  continueOnError: true
-
-- script: |
-    npm run test
-  displayName: 'npm test'
-  continueOnError: true
-
-- script: |
-    echo "Build completed successfully!"
-    echo "Deployment would happen here in production"
-  displayName: 'Build Complete'
+  - stage: Deploy
+    displayName: 'Deploy Stage (Simulation)'
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - job: DeployJob
+        displayName: 'Simulated Deployment'
+        steps:
+          - task: PowerShell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "=================================================="
+                Write-Host "DEPLOYMENT SIMULATION"
+                Write-Host "=================================================="
+                Write-Host "Deploying UIT-Go application..."
+                Write-Host "Target Environment: Development"
+                Write-Host "Deployment started at: $(Get-Date)"
+                Start-Sleep -Seconds 3
+                Write-Host "Deployment completed successfully!"
+                Write-Host "Application URL: http://uit-go-dev.azurewebsites.net"
+                Write-Host "=================================================="
+            displayName: 'Simulate Deployment'
